--- a/css/styles.css
+++ b/css/styles.css
@@ -76,11 +76,13 @@ margin: 0 auto;
 
 .nav-link {
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  display: block;
+ font-size: 16px;
+ line-height: 1.5;
+ letter-spacing: 0.02em;
+ color: #2e2f42;
+ padding-top: 24px;
+ padding-bottom: 24px;
+ display: block;
 }
 
 .contacts {
