--- a/css/styles.css
+++ b/css/styles.css
@@ -119,12 +119,13 @@ margin: 0 auto;
 }
 
 .business-h{
-    font-weight: 700;
     font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #fff;
+   line-height: 1.07;
+   text-align: center;
+   letter-spacing: 0.02em;
+   color: #ffffff;
+   max-width: 496px;
+   margin: 0 auto;
 }
 .button-business{
     font-family: "Roboto", sans-serif;
