--- a/css/styles.css
+++ b/css/styles.css
@@ -149,12 +149,34 @@ font-weight: 500;
     background-color: #404BBF;
 }
 
-.base-h-two{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
+.features-section{
+    display: flex;
+align-items: flex-start;
+justify-content: flex-start;
+flex-direction: row;
+gap: 8px;
+padding-top: 120px;
+padding-bottom: 120px;
+}
+
+base-h-two{
+  position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0;
+   padding: 0;
+   white-space: nowrap;
+   clip-path: inset(100%);
+   clip: rect(0 0 0 0);
+   overflow: hidden;
+}
+
+.base-h-three{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;
 }
 
@@ -168,13 +190,6 @@ font-weight: 500;
     text-transform: capitalize;
 }
 
-.base-h-three{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
 .base-p{
     font-size: 16px;
     line-height: 1.5;
