--- a/css/styles.css
+++ b/css/styles.css
@@ -182,11 +182,20 @@ padding-bottom: 120px;
    }
 
 .base-h-three{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+    margin-bottom: 8px;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+
+.base-p{
+    font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
 }
 
 .base-h-two-one{
@@ -199,11 +208,6 @@ padding-bottom: 120px;
     text-transform: capitalize;
 }
 
-.base-p{
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
 .team{
     background-color: #f4f4fd;
 }
