--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 }
 
-.base-p{
+.base-h-three-four{
     font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
