--- a/css/styles.css
+++ b/css/styles.css
@@ -198,22 +198,60 @@ letter-spacing: 0.02em;
 color: #434455;
 }
 
+.team{
+  padding-top: 120px;
+   padding-bottom: 120px;
+   display: flex;
+   background-color: #f4f4fd;
+}
 .base-h-two-one{
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    text-transform: capitalize;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2e2f42;
+margin-bottom: 72px;
 }
 
-.team{
-    background-color: #f4f4fd;
+.base-h-one-two{
+display: flex;
+   gap: 24px;
 }
+
+.base-h-one-two:last-child {
+  margin-right: 0;
+}
+
 .team-link{
-    background-color: #fff;
+    background-color: #ffffff;
+width: calc((100%-72px)/4);
+border-radius: 0 0 4px 4px;
 }
+
+.container-one {
+   padding: 32px 0;
+}
+
+.team-member-name {
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 8px;
+}
+.team-member-name-descr {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #434455;
+}
+
 .footer{
     background-color: #2e2f42;
 }
