--- a/css/styles.css
+++ b/css/styles.css
@@ -252,24 +252,90 @@ text-align: center;
 color: #434455;
 }
 
-.footer{
-    background-color: #2e2f42;
+.portfolio-section {
+display: flex;
+align-items: flex-start;
+justify-content: flex-start;
+flex-direction: row;
+padding-top: 120px;
+padding-bottom: 120px;
 }
-.logo-footer{
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
+
+.portfolio-section-title {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2e2f42;
+margin-bottom: 72px;
+
 }
-.logo-footer-span{
-    color: #f4f4fd;
+.portfolio-section-list {
+margin-top: 72px;
+display: flex;
+flex-wrap: wrap;
+align-items: flex-start;
+justify-content: flex-start;
+column-gap: 24px;
+row-gap: 48px;
 }
-.footer-p{
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
+
+.portfolio-item {
+width: calc((100% - 48px) / 3);
+}
+
+.list-portf-content {
+   padding: 32px 16px;
+   border: 1px solid #e7e9fc;
+   border-top: none;
+}
+.portfolio-list-name {
+margin-bottom: 8px;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+
+.portfolio-list-description {
+   font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+.section-footer {
+   background-color: #2e2f42;
+   padding: 100px 0;
+}
+
+.logo-footer {
+   font-family: Raleway, sans-serif;
+   font-weight: 700;
+   font-size: 18px;
+   line-height: 1.17;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   color: #4d5ae5;
+   margin-bottom: 16px;
+   display: inline-block;
+}
+.logo-text-footer {
+   color: #f4f4fd;
+}
+.section-footer .container {
+   align-items: flex-start;
+}
+.section-footer-descr {
+   max-width: 264px;
+   font-family: "Roboto", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #f4f4fd;
 }
