--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ margin: 0 auto;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: block;
 }
 
 .header-logo {
