--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ margin: 0 auto;
 .header-logo {
   padding: 24px 0;
   margin-right: 76px;
+  display: block;
 }
 
 .header-logo .logo-part {
@@ -104,6 +105,7 @@ font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  display: block;
 }
 
 .nav-link:hover,
