--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ display: flex;
     background-color: #ffffff;
 width: calc((100%-72px)/4);
 border-radius: 0 0 4px 4px;
+display: block;
 }
 
 .container-one {
@@ -286,6 +287,7 @@ row-gap: 48px;
 
 .portfolio-item {
 width: calc((100% - 48px) / 3);
+display: block;
 }
 
 .list-portf-content {
