--- a/css/styles.css
+++ b/css/styles.css
@@ -294,6 +294,7 @@ display: block;
    padding: 32px 16px;
    border: 1px solid #e7e9fc;
    border-top: none;
+   display: block;
 }
 .portfolio-list-name {
 margin-bottom: 8px;
